2021-09-06  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK][WPE] Gardening of two flaky tests and timeout.

        Unreviewed test gardening.

        * TestExpectations:
        * platform/glib/TestExpectations:

2021-09-06  Arcady Goldmints-Orlov  <agoldmints@igalia.com>

        [Gstreamer] Mark tests media/track/in-band/track-in-band-*-added-once.html as flaky
        https://bugs.webkit.org/show_bug.cgi?id=229973

        Unreviewed test gardening.

        * platform/glib/TestExpectations:

2021-09-06  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r282058.
        https://bugs.webkit.org/show_bug.cgi?id=229978

        broken two css layout tests on iOS

        Reverted changeset:

        "Add a temporarily prefixed property for mask-mode, aliased to
        -webkit-mask-source-type"
        https://bugs.webkit.org/show_bug.cgi?id=229915
        https://commits.webkit.org/r282058

2021-09-06  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r282057.
        https://bugs.webkit.org/show_bug.cgi?id=229977

        made a layout test extremely flaky

        Reverted changeset:

        "Add support for RTCSctpTransport"
        https://bugs.webkit.org/show_bug.cgi?id=229292
        https://commits.webkit.org/r282057

2021-09-06  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r282025.
        https://bugs.webkit.org/show_bug.cgi?id=229970

        broken layout test on mac-debug-wk1

        Reverted changeset:

        "Allow layout tests to open popups by default"
        https://bugs.webkit.org/show_bug.cgi?id=229881
        https://commits.webkit.org/r282025

2021-09-06  Simon Fraser  <simon.fraser@apple.com>

        REGRESSION (r280017): Calling getBoundingClientRect() on an empty element with "break-before: column" in columns returns a rect with all zeros
        https://bugs.webkit.org/show_bug.cgi?id=229747

        Reviewed by Alan Bujtas.
